k8s/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-backend
  template:
    metadata:
      labels:
        app: eshop-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/mdansevicius/sairen-atelier/backend:main-c115dcce513b
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
