k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-backend
spec:
  selector:
    app: eshop-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
