k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: sairen.lt
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eshop-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - sairen.lt
      secretName: wildcard-sairen-lt-tls
